Fixed bug #46110 (XMLWriter - openmemory() and openuri() leak memory on multiple calls).